[package]
name = "grid-collide2d"
description = "Simple grid based 2D collision engine"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

# Compile Features
[features]
default = ["2d", "std"]
2d = []

# Fixed point arithmetic
fixnum = ["dep:fixnum"]

# enable support for the standard library
std = [
    "num-traits/std",
    "ndarray/std",
    "gridmap?/std",
    "fixnum?/std",
    "nalgebra/std",
    "nalgebra-glm/std",
    "bvh-arena/std",
    "spin/std",
]

# features related to gridmap
gridmap = ["dep:gridmap"]
alloc = ["nalgebra/alloc", "gridmap?/alloc"]
rayon = ["nalgebra/rayon", "ndarray/rayon", "gridmap?/rayon"]
serde = ["nalgebra/serde", "ndarray/serde", "gridmap?/serde", "fixnum?/serde"]

# Library configuration
[lib]
name = "grid_collide2d"
#path = "../../src/lib.rs"
required-features = ["2d"]

# Dependencies
[dependencies]

# Data layout for each individual tile
bitfield = "0.19"

# Map data structure
ndarray = { version = "0.16", default-features = false }
gridmap = { version = "0.0.2", default-features = false, optional = true }

# Geometry operations
num-traits = { version = "0.2", default-features = false }
fixnum = { version = "0.9", default-features = false, optional = true }
nalgebra = { version = "0.33", default-features = false }
nalgebra-glm = { version = "0.19", default-features = false }

# Broadphase
bvh-arena = { version = "1.1", default-features = false }

# Mutable access to shared references
spin = "0.10"

# Delegate methods from internal fields
delegate = "0.13"

# Dependencies for examples
[dev-dependencies]

# Quick rendering
macroquad = "0.4"
