[package]
name = "grid-collide3d"
description = "Simple grid based 3D collision engine"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

# Compile Features
[features]
default = ["3d", "std"]
3d = []

# enable support for the standard library
std = ["nalgebra-glm/std", "bvh-arena/std", "spin/std"]


# Library configuration
[lib]
name = "grid_collide3d"
#path = "../../src/lib.rs"
required-features = ["3d"]

# Dependencies
[dependencies]

# Mutable access to shared references
spin = "0.10"

# Broadphase
bvh-arena = { version = "1.1", default-features = false }

# Geometry operations
nalgebra-glm = { version = "0.19", default-features = false }

# Delegate methods from internal fields
delegate = "0.13"

# Dependencies for examples
[dev-dependencies]

# Quick rendering
macroquad = "0.4"
